<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/results_header_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_header"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/correct_answers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/correct_answers"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/correct_answers_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="#" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/submitted_answers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/submitted_answers"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/submitted_answers_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="#" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hints_used_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/hints_used"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/hints_used_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="#" />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/reset_all_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_all" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>